# berlin-tdd-workshop

./: .gitignore  DataProfiling.ipynb  EDA.ipynb  Makefile  README.md  data_preparation.py  environment.yml  imputation.py  measurementRectanglesMissing.csv  pyproject.toml  requirements.txt  transformation.py  workshop.md
scripts/: imputation.py  transformation.py
test/: test_data_preparation.py  test_imputation.py  test_imputation_exercises.py  test_scoring.py  test_solution.py  test_transformation.py  test_transformation_exercises.py
