[tool.poetry]
name = "berlin-tdd-workshop"
version = "0.0.1"
description = "TDD showcase"
readme = "README.md"
authors = ["wimlds"]

[tool.poetry.dependencies]
python = "^3.7.0"
pandas= "^1.0.1"
numpy= "1.16.4"
matplotlib= "3.2.0"
scikit-learn= "0.21.2"
statsmodels = "0.10.0"
click = "^7.1.1"
pandas-profiling = "2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0.1"
pytest-cov = "^2.7"
black = "19.3b0"
seaborn = "0.9.0"
jupyter = "^1.0.0"
jupyterlab = "^2.0.1"
flake8 = "^3.7.9"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=1.0.0"]